8262134: compiler/uncommontrap/TestDeoptOOM.java failed with "guarantee(false) failed: wrong number of expression stack elements during deopt"

Backport-of: 32139c1a8aae51c0869f41be57580ff4463913d2